--- a/Readme
+++ b/Readme
@@ -1,7 +1,8 @@
 # For Practice Personal Project
-https://user-images.githubusercontent.com/21010227/201406448-ebe3681f-49e2-4b0a-bcd7-de3318c7f312.png 
-https://user-images.githubusercontent.com/21010227/201405056-178bf3f5-851f-4780-819b-b92b9023d2d8.png
-https://user-images.githubusercontent.com/21010227/201408129-dd0e2d2b-ba45-4ef1-9607-30e272d74410.png
+
+<img width="955" alt="" src="https://user-images.githubusercontent.com/21010227/201406448-ebe3681f-49e2-4b0a-bcd7-de3318c7f312.png">
+<img width="955" alt="" src="https://user-images.githubusercontent.com/21010227/201405056-178bf3f5-851f-4780-819b-b92b9023d2d8.png">
+<img width="955" alt="" src="https://user-images.githubusercontent.com/21010227/201408129-dd0e2d2b-ba45-4ef1-9607-30e272d74410.png">
 
 
 
